Fix z-index so that menu is at the top

--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -774,6 +774,7 @@ div.news-item div {
   top: -10px;
   margin: 5px;
   background: white;
+  z-index: 0;
 }
 
 .news-item a {
@@ -1089,6 +1090,7 @@ ul.main-menu li ul {
   position: absolute;
   top: 1em;
   left: 0;
+  z-index: 1;
 }
 
 ul.main-menu li > ul {
